--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,11 +17,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-    }
-
-    ext {
-        androidSupportVersion = "25.3.0"
-
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
